[project]
name = "policy-sim-env"
version = "1.0.0"
description = "Municipal Policy Simulation — OpenEnv RL Environment"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "requests==2.31.0",
    "PyYAML==6.0.1",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/YOUR_USERNAME/policy-sim-env"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
